# PyTigo

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
examples/: basic_usage.py  cloud_live_validation.py  live_panel_power.py  local_cca_endpoints.py  local_cca_power.py
src/pytigo/: __init__.py  client.py  local_client.py  models.py  parsing.py  protocol.py
tests/: test_api_client.py  test_api_parsing.py  test_endpoints.py  test_local_client.py  test_packaging.py  test_parsing.py  test_rich_topology.py
