[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pytigo"
version = "0.1.0"
description = "Python client for Tigo EI portal system, panel, and production data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Blind Badger Studios" },
]
keywords = ["tigo", "solar", "energy", "monitoring", "photovoltaic", "pv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Home Automation",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/BlindBadgerStudios/PyTigo"
Repository = "https://github.com/BlindBadgerStudios/PyTigo"
Issues = "https://github.com/BlindBadgerStudios/PyTigo/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
