[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pytigo"
version = "0.4.4"
description = "Python client for the documented Tigo REST API v3"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Blind Badger Studios" },
]
keywords = ["tigo", "solar", "energy", "monitoring", "photovoltaic", "pv", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Home Automation",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/BlindBadgerStudios/PyTigo"
Repository = "https://github.com/BlindBadgerStudios/PyTigo"
Issues = "https://github.com/BlindBadgerStudios/PyTigo/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build",
  "twine",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
